Added a challenge.js class

--- a/Home.html
+++ b/Home.html
@@ -10,6 +10,7 @@
 <script type="text/javascript" src="Frame.js"></script>
 <script type="text/javascript" src="User.js"></script>
 <script type="text/javascript" src="LinkedinHandler.js"></script>
+<script type="text/javascript" src="Challenges.js"></script>
 <script type="text/javascript" src="http://platform.linkedin.com/in.js">
 
   api_key: kd55r8vt584t
