Circle organization added on gamemap

--- a/gamemap/mapui.html
+++ b/gamemap/mapui.html
@@ -12,6 +12,7 @@
 		<script type="text/javascript" src="mapui.js"></script>
         <script type="text/javascript" src="initialize.js"></script>
         <script type="text/javascript" src="focus.js"></script>
+        <script type="text/javascript" src="linkmenu.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css" />
 		
 </head>
