--- a/gamemap/mapui.html
+++ b/gamemap/mapui.html
@@ -35,7 +35,7 @@
 			<iframe width="100%" height="55" id="URLcont" style="border:none;"></iframe>
 		</div>
 
-		<svg class = "svgc" id="svgc" style="width:3000px; height:600px; overflow:hidden;"  version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+		<svg class = "svgc" id="svgc" style="width:100%; height:600px; overflow:hidden;"  version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 		</svg>
 
         
