--- a/challenges.html
+++ b/challenges.html
@@ -4,16 +4,21 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Challenges</title>
     <script type="text/javascript" src="Challenges.js"></script>
-        <link rel="stylesheet" type="text/css" href="challengesStyle.css" />
+    <script type="text/javascript">
+    Challenges = new challenges();
+    </script>
+    <link rel="stylesheet" type="text/css" href="challengesStyle.css" />
+	
     </head>
 
     <body>
     	<div class="miniChallenges">
-        	
-            <img src="awardsNo.png" alt="Get me!" /><br />
- 			<img src="awardsNo.png" alt="Get me!" /><br />
-            <img src="awardsNo.png" alt="Get me!" /><br />
-            <img src="awardsNo.png" alt="Get me!" /><br />
+        	<div Id="challengeList" class="challengeList"> 
+            <!-- challenges show here -->
+			</div>
         </div> <!-- End miniprofile div -->
+        
+        <!-- test buttons -->
+		<button type="button" onclick="Challenges.generateText()">Test Challenges</button>
     </body>
 </html>
