--- a/gamemap/Home.html
+++ b/gamemap/Home.html
@@ -16,6 +16,7 @@
         <script type="text/javascript" src="divmenu.js"></script>
         <script type="text/javascript" src="Challenges.js"></script>
 		<script type="text/javascript" src="notestream.js"></script>
+        <script type="text/javascript" src="liprofile.js"></script>
 		<script type="text/javascript" src="profile.js"></script>
         <script type="text/javascript" src="http://platform.linkedin.com/in.js">
 		  api_key: kd55r8vt584t
@@ -76,6 +77,6 @@
 				list of challenges
 		</div>
         </footer>
-	<div id='catcher' ondragover="allowDrop(event)" ondrop="drop(event)" onClick="onMD(event)" style="width:100%; height:600px; top:0; position:absolute; z-index:2;"> </div>
+	<div id='catcher' ondragover="allowDrop(event)" ondrop="drop(event)" onClick="onMD(event)" style="width:100%; height:600px; top:0; position:absolute; z-index:2; "> </div>
 </body>
 </html>
