--- a/gamemap/Home.html
+++ b/gamemap/Home.html
@@ -11,6 +11,7 @@
 		<!--<meta name="viewport" content="user-scalable=no, width=device-width" />-->
 		<script type="text/javascript" src="mapuiV2.js"></script>
         <script type="text/javascript" src="initialize.js"></script>
+        <script type="text/javascript" src="connectionprofile.js"></script>
         <script type="text/javascript" src="focus.js"></script>
         <script type="text/javascript" src="LinkedinHandler.js"></script>
         <script type="text/javascript" src="divmenu.js"></script>
@@ -35,7 +36,7 @@
 </head>
 
 <body onLoad="initialize()">
-<header>
+<header style="width:100%;height:30px;background-color:#6CF;z-index:4;">
  <img src="logo.png" style="position:relative; height:inherit;">Calvin</img>
  <script type="IN/Login" data-onAuth="onLinkedInLoad"></script>
 </header>
@@ -58,7 +59,7 @@
             </div>
  			
         </div> <!-- End miniprofile div -->
-		<div id="recommendcontact" style="position:absolute; top:40px; left:180px; opacity:0; z-index:1">
+		<div id="recommendcontact" style="position:absolute; top:40px; left:180px; opacity:0; z-index:1;font:Arial, Helvetica, sans-serif; font-size:14px;">
         	<h3 id="contacttitle" style="position:relative; top:0px; left:3px; z-index:1">something</h3>
         	<textarea id ="contacttextarea" rows="7" cols="30" style="max-height:100px; max-width:200px; z-index:1">...
             </textarea>
@@ -66,8 +67,8 @@
 
 		<svg id="svgc" style="width:100%; height:570px; background:#C9F; z-index:0"  version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 		</svg>
-		<footer>
-        <div id="contactprofile" style="position:relative; float:left; z-index:2; top:5px; left:5px; height:140px; width:200px; background:#0F0">
+		<footer style:"width:100%;height:150px;background-color:#FC9;">
+        <div id="contactprofile" style="position:relative; float:left; z-index:2; top:5px; left:5px; height:140px; width:350px; background:#0F0">
 				Contact Profile
 		</div>
         <div id="publicopinion" style="position:relative; float:left; z-index:2; top:5px; left:10px; height:140px; width:200px; background:#0F0">
