--- a/gamemap/Home.html
+++ b/gamemap/Home.html
@@ -16,9 +16,12 @@
         <script type="text/javascript" src="LinkedinHandler.js"></script>
         <script type="text/javascript" src="divmenu.js"></script>
         <script type="text/javascript" src="Challenges.js"></script>
-		<script type="text/javascript" src="notestream.js"></script>
+		<script type="text/javascript" src="actionitem.js"></script>
         <script type="text/javascript" src="liprofile.js"></script>
 		<script type="text/javascript" src="profile.js"></script>
+        <script type="text/javascript" src="./jquery/jquery-1.3.1.min.js"></script>
+		<script type="text/javascript" src="./jquery/jquery.easing.1.3.js"></script>
+        <script type="text/javascript" src="./jquery/jquery.color.js"></script>
         <script type="text/javascript" src="http://platform.linkedin.com/in.js">
 		  api_key: kd55r8vt584t
 		  onLoad: onLinkedInLoad
@@ -36,7 +39,8 @@
 </head>
 
 <body onLoad="initialize()">
-<header style="width:100%;height:30px;background-color:#6CF;z-index:4;">
+<div id='catcher' ondragover="allowDrop(event)" ondrop="drop(event)" onClick="onMD(event)" style="width:100%; height:570px; top:30px; position:absolute; z-index:2; "> </div>
+<header style="width:100%;height:30px;background-color:#6CF;z-index:6;">
  <img src="logo.png" style="position:relative; height:inherit;">Calvin</img>
  <script type="IN/Login" data-onAuth="onLinkedInLoad"></script>
 </header>
@@ -59,25 +63,32 @@
             </div>
  			
         </div> <!-- End miniprofile div -->
-		<div id="recommendcontact" style="position:absolute; top:40px; left:180px; opacity:0; z-index:1;font:Arial, Helvetica, sans-serif; font-size:14px;">
-        	<h3 id="contacttitle" style="position:relative; top:0px; left:3px; z-index:1">something</h3>
-        	<textarea id ="contacttextarea" rows="7" cols="30" style="max-height:100px; max-width:200px; z-index:1">...
-            </textarea>
+        <div id="actionableitem">
+        	
+        </div>
+        <div id="notelist">
+        	<ul id="pastnotemenu" >
+            </ul>
+        </div>
+		<div id="recommendcontact">
+        	<h3 id="contacttitle" style="position:relative; top:0px; left:3px; z-index:inherit">something</h3>
+   			<input id ="contacttextarea" onMouseDown="focus()" style="width:206px;"></input>
+            <button class ="btn" onClick="addNotes()">Add</button>
         </div>
 
 		<svg id="svgc" style="width:100%; height:570px; background:#C9F; z-index:0"  version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 		</svg>
 		<footer style:"width:100%;height:150px;background-color:#FC9;">
-        <div id="contactprofile" style="position:relative; float:left; z-index:2; top:5px; left:5px; height:140px; width:350px; background:#0F0">
+        <div id="contactprofile" style="position:relative; float:left; z-index:2; top:5px; left:5px; height:140px; width:350px;">
 				Contact Profile
 		</div>
-        <div id="publicopinion" style="position:relative; float:left; z-index:2; top:5px; left:10px; height:140px; width:200px; background:#0F0">
+        <div id="publicopinion" style="position:relative; float:left; z-index:2; top:5px; left:10px; height:140px; width:200px;">
 				Public say
 		</div>
-        <div id="challenges" style="position:relative; float:left; z-index:2; top:5px; left:15px; height:140px; width:400px; background:#0F0">
+        <div id="challenges" style="position:relative; float:left; z-index:2; top:5px; left:15px; height:140px; width:400px;">
 				list of challenges
 		</div>
         </footer>
-	<div id='catcher' ondragover="allowDrop(event)" ondrop="drop(event)" onClick="onMD(event)" style="width:100%; height:600px; top:0; position:absolute; z-index:2; "> </div>
+	
 </body>
 </html>
