--- a/gamemap/Home.html
+++ b/gamemap/Home.html
@@ -40,8 +40,8 @@
 
 <body onLoad="initialize()">
 <div id='catcher' ondragover="allowDrop(event)" ondrop="drop(event)" onClick="onMD(event)" style="width:100%; height:570px; top:30px; position:absolute; z-index:2; "> </div>
-<header style="width:100%;height:30px;background-color:#6CF;z-index:6;">
- <img src="logo.png" style="position:relative; height:inherit;">Calvin</img>
+<header >
+ <img src="logo.png" style="position:relative; height:inherit;"></img>
  <script type="IN/Login" data-onAuth="onLinkedInLoad"></script>
 </header>
 <div class="miniProfile">
@@ -63,23 +63,22 @@
             </div>
  			
         </div> <!-- End miniprofile div -->
-        <div id="actionableitem">
-        	
+        <div id="actionableitem" style="-moz-box-shadow: 3px 3px 4px #CCC;-webkit-box-shadow: 3px 3px 4px #CCC;box-shadow: 3px 3px 4px #CCC;">
         </div>
         <div id="notelist">
-        	<ul id="pastnotemenu" >
+        	<ul id="pastnotemenu" style="-moz-box-shadow: 3px 3px 4px #CCC;-webkit-box-shadow: 3px 3px 4px #CCC;box-shadow: 3px 3px 4px #CCC;">
             </ul>
         </div>
-		<div id="recommendcontact">
-        	<h3 id="contacttitle" style="position:relative; top:0px; left:3px; z-index:inherit">something</h3>
-   			<input id ="contacttextarea" onMouseDown="focus()" style="width:206px;"></input>
-            <button class ="btn" onClick="addNotes()">Add</button>
+		<div id="recommendcontact" style="-moz-box-shadow: 3px 3px 4px #CCC;-webkit-box-shadow: 3px 3px 4px #CCC;box-shadow: 3px 3px 4px #CCC;">
+        	<h3 id="contacttitle" style="position:relative; top:0px; left:3px; z-index:inherit;background:">something</h3>
+   			<input id ="contacttextarea" style="left:3px;width:200px;position:relative;"></input>
+            <button class ="btn" style="position:absolute;right:0px;bottom:5px" onClick="addNotes()">Add</button>
         </div>
 
 		<svg id="svgc" style="width:100%; height:570px; background:#C9F; z-index:0"  version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 		</svg>
-		<footer style:"width:100%;height:150px;background-color:#FC9;">
-        <div id="contactprofile" style="position:relative; float:left; z-index:2; top:5px; left:5px; height:140px; width:350px;">
+		<footer>
+        <div id="contactprofile" style="background:#CFC; position:relative; float:left; z-index:2; top:5px; left:5px; height:140px; width:350px; -moz-box-shadow: 3px 3px 4px #CCC;-webkit-box-shadow: 3px 3px 4px #CCC;box-shadow: 3px 3px 4px #CCC;">
 				Contact Profile
 		</div>
         <div id="publicopinion" style="position:relative; float:left; z-index:2; top:5px; left:10px; height:140px; width:200px;">
