minor z-index fixes and took out profile for now

--- a/gamemap/Home.html
+++ b/gamemap/Home.html
@@ -44,7 +44,9 @@
  <img src="logo.png" style="position:relative; height:inherit;"></img>
  <script type="IN/Login" data-onAuth="onLinkedInLoad"></script>
 </header>
+<!--
 <div class="miniProfile">
+
             <div class="pictureContainer">
             	<img class="pictureProfile" src="zahid.jpg" alt="Your pretty face"> 
    			 </div>
@@ -55,18 +57,19 @@
             	<h1 class="alertCounterText"><b id="alerts">10</b><h1>
             </div>
             <div class="otherPoints">
-           	  <h3><img class="otherPointsPicture" src="credits.png" alt="Credits"/><b class="otherPointsValue" id="credits">1430</b></h3> <!-- TODO pull initial from server-->	
-           	  <h3><img class="otherPointsPicture" src="awards.png" alt="Awards"/><b class = "otherPointsValue" id="awards">10</b></h3> <!-- TODO pull initial from server-->
+           	  <h3><img class="otherPointsPicture" src="credits.png" alt="Credits"/><b class="otherPointsValue" id="credits">1430</b></h3>
+           	  <h3><img class="otherPointsPicture" src="awards.png" alt="Awards"/><b class = "otherPointsValue" id="awards">10</b></h3> 
      		</div>
             <div class="score">
-            	<h1 id="score" >345039</h1> <!-- TODO pull initial from server-->
+            	<h1 id="score" >345039</h1> 
             </div>
  			
-        </div> <!-- End miniprofile div -->
+        </div>  End miniprofile div -->
+        
         <div id="actionableitem" style="-moz-box-shadow: 3px 3px 4px #CCC;-webkit-box-shadow: 3px 3px 4px #CCC;box-shadow: 3px 3px 4px #CCC;">
         </div>
-        <div id="notelist">
-        	<ul id="pastnotemenu" style="-moz-box-shadow: 3px 3px 4px #CCC;-webkit-box-shadow: 3px 3px 4px #CCC;box-shadow: 3px 3px 4px #CCC;">
+        <div id="notelist" >
+        	<ul id="pastnotemenu">
             </ul>
         </div>
 		<div id="recommendcontact" style="-moz-box-shadow: 3px 3px 4px #CCC;-webkit-box-shadow: 3px 3px 4px #CCC;box-shadow: 3px 3px 4px #CCC;">
@@ -78,8 +81,7 @@
 		<svg id="svgc" style="width:100%; height:570px; background:#C9F; z-index:0"  version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 		</svg>
 		<footer>
-        <div id="contactprofile" style="background:#CFC; position:relative; float:left; z-index:2; top:5px; left:5px; height:140px; width:350px; -moz-box-shadow: 3px 3px 4px #CCC;-webkit-box-shadow: 3px 3px 4px #CCC;box-shadow: 3px 3px 4px #CCC;">
-				Contact Profile
+        <div id="contactprofile" style="background:#CFC; position:relative; float:left; z-index:2; top:5px; left:5px; height:140px; width:350px; -moz-box-shadow: 3px 3px 4px #CCC;-webkit-box-shadow: 3px 3px 4px #CCC;box-shadow: 3px 3px 4px #CCC;-moz-border-radius: 10px;border-radius: 10px;">
 		</div>
         <div id="publicopinion" style="position:relative; float:left; z-index:2; top:5px; left:10px; height:140px; width:200px;">
 				Public say
