Actionable item now works with adding to calendar events

--- a/gamemap/Home.html
+++ b/gamemap/Home.html
@@ -12,6 +12,7 @@
 		<script type="text/javascript" src="mapuiV2.js"></script>
         <script type="text/javascript" src="initialize.js"></script>
         <script type="text/javascript" src="connectionprofile.js"></script>
+        <script type="text/javascript" src="appointment.js"></script>
         <script type="text/javascript" src="focus.js"></script>
         <script type="text/javascript" src="LinkedinHandler.js"></script>
         <script type="text/javascript" src="divmenu.js"></script>
@@ -22,6 +23,11 @@
         <script type="text/javascript" src="./jquery/jquery-1.3.1.min.js"></script>
 		<script type="text/javascript" src="./jquery/jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="./jquery/jquery.color.js"></script>
+        <script type="text/javascript" src="jquery-1.7.1.min.js"></script>
+		<script type="text/javascript" src="jquery-ui-1.8.16.custom.min.js"></script>
+		<script type="text/javascript" src="jquery-ui-timepicker-addon.js"></script>
+		<script type="text/javascript" src="jquery-ui-sliderAccess.js"></script>
+		<link rel="stylesheet" media="all" type="text/css" href="jquery-ui-1.8.16.custom.css" />
         <script type="text/javascript" src="http://platform.linkedin.com/in.js">
 		  api_key: kd55r8vt584t
 		  onLoad: onLinkedInLoad
