Added more functionality to be tested later. Added notification counter, added priority types

--- a/gamemap/Home.html
+++ b/gamemap/Home.html
@@ -44,8 +44,8 @@
         <![endif]-->
 </head>
 
-<body onLoad="initialize()">
-<div id='catcher' ondragover="allowDrop(event)" ondrop="drop(event)" onClick="onMD(event)" style="width:100%; height:570px; top:30px; position:absolute; z-index:2; "> </div>
+<body onLoad="initialize()" ondragover="allowDrop(event)" ondrop="drop(event)" onClick="onMD(event)">
+<!--<div id='catcher' ondragover="allowDrop(event)" ondrop="drop(event)" onClick="onMD(event)" style="width:100%; height:570px; top:30px; position:absolute; z-index:2; "> </div>-->
 <header >
  <img src="logo.png" style="position:relative; height:inherit;"></img>
  <script type="IN/Login" data-onAuth="onLinkedInLoad"></script>
