Fixes and Notifications

--- a/gamemap/Home.html
+++ b/gamemap/Home.html
@@ -19,7 +19,6 @@
         <script type="text/javascript" src="Challenges.js"></script>
 		<script type="text/javascript" src="actionitem.js"></script>
         <script type="text/javascript" src="liprofile.js"></script>
-		<script type="text/javascript" src="profile.js"></script>
         <script type="text/javascript" src="./jquery/jquery-1.3.1.min.js"></script>
 		<script type="text/javascript" src="./jquery/jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="./jquery/jquery.color.js"></script>
@@ -71,7 +70,8 @@
             </div>
  			
         </div>  End miniprofile div -->
-        
+        <div id='profile' style="-moz-box-shadow: 3px 3px 4px #CCC;-webkit-box-shadow: 3px 3px 4px #CCC;box-shadow: 3px 3px 4px #CCC;">
+        </div>
         <div id="actionableitem" style="-moz-box-shadow: 3px 3px 4px #CCC;-webkit-box-shadow: 3px 3px 4px #CCC;box-shadow: 3px 3px 4px #CCC;">
         </div>
         <div id="notelist" >
