--- a/gamemap/Home.html
+++ b/gamemap/Home.html
@@ -49,30 +49,21 @@
  <img src="logo.png" style="position:relative; height:inherit;"></img>
  <script type="IN/Login" data-onAuth="onLinkedInLoad"></script>
 </header>
-<!--
-<div class="miniProfile">
+<div id='profile'>
+    <img id='profileimage' alt="Profile" src="zahid.jpg"></img>
+    <h3 id="profilename">Your Name</h1>
+    <p id="profiletitle">Your Awesome Job and your Awesome Company</p>
+    <div id="alertCounter">
+        <p id="alertCounterText">10<p>
+    </div>
+    
+    <h3><img id="creditpic" src="credits.png" alt="Credits"/><b id="credits">Over 9000</b></h3>
+    <h3><img id="awardpic" src="awards.png" alt="Awards"/><b id="awards">9000</b></h3>
+    <h3><img id="linkpic" src="link.png" alt="Links"/><b id="links">9000</b></h3>
+    <h3><img id="pointpic" src="earth.png" alt="Points"/><b id="points">Over 9000</b></h3> 
+</div>
 
-            <div class="pictureContainer">
-            	<img class="pictureProfile" src="zahid.jpg" alt="Your pretty face"> 
-   			 </div>
-			<div class="userName">
-            	<h1 class="userName">Zahid Hasan</h1>
-            </div>
-            <div class="alertCounter">
-            	<h1 class="alertCounterText"><b id="alerts">10</b><h1>
-            </div>
-            <div class="otherPoints">
-           	  <h3><img class="otherPointsPicture" src="credits.png" alt="Credits"/><b class="otherPointsValue" id="credits">1430</b></h3>
-           	  <h3><img class="otherPointsPicture" src="awards.png" alt="Awards"/><b class = "otherPointsValue" id="awards">10</b></h3> 
-     		</div>
-            <div class="score">
-            	<h1 id="score" >345039</h1> 
-            </div>
- 			
-        </div>  End miniprofile div -->
-        <div id='profile' style="-moz-box-shadow: 3px 3px 4px #CCC;-webkit-box-shadow: 3px 3px 4px #CCC;box-shadow: 3px 3px 4px #CCC;">
-        </div>
-        <div id="actionableitem" style="-moz-box-shadow: 3px 3px 4px #CCC;-webkit-box-shadow: 3px 3px 4px #CCC;box-shadow: 3px 3px 4px #CCC;">
+      <div id="actionableitem" style="-moz-box-shadow: 3px 3px 4px #CCC;-webkit-box-shadow: 3px 3px 4px #CCC;box-shadow: 3px 3px 4px #CCC;">
         </div>
         <div id="notelist" >
         	<ul id="pastnotemenu">
@@ -87,7 +78,7 @@
 		<svg id="svgc" style="width:100%; height:570px; background:#C9F; z-index:0"  version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 		</svg>
 		<footer>
-        <div id="contactprofile" style="background:#CFC; position:relative; float:left; z-index:2; top:5px; left:5px; height:140px; width:350px; -moz-box-shadow: 3px 3px 4px #CCC;-webkit-box-shadow: 3px 3px 4px #CCC;box-shadow: 3px 3px 4px #CCC;-moz-border-radius: 10px;border-radius: 10px;">
+        <div id="contactprofile" style="background:#36C; position:relative; float:left; z-index:2; top:5px; left:5px; height:140px; width:350px; -moz-box-shadow: 3px 3px 4px #CCC;-webkit-box-shadow: 3px 3px 4px #CCC;box-shadow: 3px 3px 4px #CCC;-moz-border-radius: 10px;border-radius: 10px;">
 		</div>
         <div id="publicopinion" style="position:relative; float:left; z-index:2; top:5px; left:10px; height:140px; width:200px;">
 				Public say
