minor changes like favicon and linkedin button

--- a/gamemap/Home.html
+++ b/gamemap/Home.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html> 
 	<head> 
-		<title>Contact Circles</title> 
+		<title>Edacio</title> 
 		<meta charset="utf-8" /> 
 		
 		<meta name="keywords" content="mathematical graph, graph theory, drawing, nice drawing, force-based, approach, algorithm, javascript, layout">
@@ -49,10 +49,7 @@
 <!--<div id='catcher' ondragover="allowDrop(event)" ondrop="drop(event)" onClick="onMD(event)" style="width:100%; height:570px; top:30px; position:absolute; z-index:2; "> </div>-->
 <img src="logo2.png" style="height:45px;position:absolute;top:5px;left:5px; z-index:6"></img>
 <header>
- <img src="logo2.png" style="height:inherit;opacity:0"></img>
- <img src="logo2.png" style="height:inherit;opacity:0"></img>
- <img src="logo2.png" style="height:inherit;opacity:0"></img>
- <script type="IN/Login" data-onAuth="onLinkedInLoad"></script>
+
 </header>
 <div id="menulist">
  <ul id="menulistul">
@@ -60,9 +57,9 @@
 </div>
 <div id='profile'>
     <img id='profileimage' alt="Profile" src="tempme.png"></img>
-    <h3 id="profilename">Your Name</h1>
-    <div id="alertCounter">
-        <p id="alertCounterText">10<p>
+    <h3 id="profilename"> <script type="IN/Login" data-onAuth="onLinkedInLoad"></script></h1>
+    <div id="alertCounter" style="opacity:0">
+        <p id="alertCounterText"><p>
     </div>
     
     <h3><img id="creditpic" src="credits.png" alt="Credits"/><b id="credits">0</b></h3>
