fixed LOGO link

--- a/gamemap/Home.html
+++ b/gamemap/Home.html
@@ -47,7 +47,7 @@
 
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" onLoad="initialize()" ondragover="allowDrop(event)" ondrop="drop(event)" onClick="onMD(event)">
 <!--<div id='catcher' ondragover="allowDrop(event)" ondrop="drop(event)" onClick="onMD(event)" style="width:100%; height:570px; top:30px; position:absolute; z-index:2; "> </div>-->
-<img src="logo2.png" style="height:45px;position:absolute;top:5px;left:5px; z-index:6"></img>
+<a href="https://edacio.herokuapp.com"><img src="logo2.png" style="height:45px;position:absolute;top:5px;left:5px; z-index:6"></img></a>
 <header>
 
 </header>
